@@ -1,0 +1,7 @@
+Essential information for reporting Issues:
+* What version of Windows, and 32/64 bit:
+* What Build number of Metatrader:
+* Where was the Metatrader installed from:
+* What version of Python:
+* Where was the Python installed from:
+* OTMql4Py from git, or what version of the OTMql4Py installer:
