@@ -22,7 +22,7 @@ Mt4 can poll Python for commands to be executed in Mt4 from Python.</p>
 with contributions by C. Polymeris:<br />
 <a href="http://chiselapp.com/user/polymeris/repository/metatraderpy/index">http://chiselapp.com/user/polymeris/repository/metatraderpy/index</a></p>
 
-<p><strong>This is a work in progress - a developers' pre-release version.</strong></p>
+<p><strong>This is a work in progress - a developers' version.</strong></p>
 
 <p>The code is quite stable now, and there should be no major file or API changes.<br />
 It works well on builds &gt; 6xx, but the documentation of the additions to the<br />
