@@ -1,0 +1,43 @@
+<!DOCTYPE html>
+<html>
+<!-- This file is automatically generated: do not edit. -->
+<head>
+<title>OTMql4Py Test</title>
+<meta charset="utf-8">
+</head>
+<body>
+<!-- <h1>OTMql4Py Test</h1> -->
+<h3>MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</h3>
+
+<p>A simple test Script that doesn't do much, but it's a start.<br />
+Attach it to a chart, and a MessageBox will pop up to tell you<br />
+if it passed or failed.<br />
+We will put each test as a boolean external input so the user<br />
+can select which tests to run.</p>
+
+<p><tt>void vAlert(string uText) </tt></p>
+
+<p><tt>string eTestStdout(string uFile) </tt></p>
+
+<p><tt>string eTestDatatypes() </tt></p>
+
+<p><tt>string eTestImport() </tt></p>
+
+<p><tt>string eTestMessageBox() </tt></p>
+
+<p><tt>string eTestSyntaxError() </tt></p>
+
+<p><tt>string eTestRuntimeError() </tt></p>
+
+<p><tt>void OnStart() </tt></p>
+
+<p><tt>void OnDeinit(const int iReason) </tt><br />
+    FixMe: we dont really want to deinit for all reasons;<br />
+    It is untested as to whether this will cause access violations.<br />
+    recompiling and reloading should not require reinitializing.<br />
+    if (iReason == 2) {return;}<br />
+    BUT we have no way of telling if the OnStart is called from a recompile.<br />
+    We are also seeing iReason == 0 when Mt4 sees a script has been recompiled.</p>
+
+<p>Source code: <a href="MQL4/Scripts/OTMql4/OTMql4PyTest.mq4">https://github.com/OpenTrading/OTMql4Py/raw/master/MQL4/Scripts/OTMql4/OTMql4PyTest.mq4</a></p></body>
+</html>
