@@ -19,9 +19,11 @@
 	<li><a href="MetatraderWithPython.html">MetatraderWithPython</a></li>
 	<li><a href="OTLibPy27.html">OTLibPy27</a></li>
 	<li><a href="OTLibPyLog.html">OTLibPyLog</a></li>
+	<li><a href="OTMql4PyTest.html">OTMql4PyTest</a></li>
 	<li><a href="OTPyChart.html">OTPyChart</a></li>
 	<li><a href="ProjectHistory.html">ProjectHistory</a></li>
 	<li><a href="RoadMap.html">RoadMap</a></li>
+	<li><a href="Scripts.html">Scripts</a></li>
 	<li><a href="SomeNotes.html">SomeNotes</a></li>
 	<li><a href="TestedVersions.html">TestedVersions</a></li>
 	<li><a href="Testing.html">Testing</a></li>
