@@ -10,9 +10,11 @@
 * [[MetatraderWithPython]]
 * [[OTLibPy27]]
 * [[OTLibPyLog]]
+* [[OTMql4PyTest]]
 * [[OTPyChart]]
 * [[ProjectHistory]]
 * [[RoadMap]]
+* [[Scripts]]
 * [[SomeNotes]]
 * [[TestedVersions]]
 * [[Testing]]
